fix overflow issue in user.html (ie. scorebook and setting)

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -31,6 +31,8 @@
 
 .dynamic-content {
     border: solid 5px #c4b056;
+    min-width: 0;
+    overflow-x: auto;
 }
 
 .sidebar-button {
@@ -101,55 +103,63 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
 
-.scorecard-container h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.scorecard-container table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-}
-
-.scorecard-container thead {
-    background-color: #1a4d2e;
-    color: #FFE694;
-    th, td {
-        border: 1px solid black;
-        padding: 10px;
+    h2 {
         text-align: center;
+        margin-bottom: 20px;
     }
-}
 
-.scorecard-container th,
-.scorecard-container td {
-    border: 1px solid #73737383;
-    padding: 10px;
-    text-align: center;
-}
+    table {
+        white-space: nowrap;
+        width: 100%;
+        border-collapse: collapse;
+        
+        thead {
+            tr {
+                background-color: #1a4d2e;
+                color: #FFE694;
+            }
+            th, td {
+                border: 1px solid black;
+                padding: 10px;
+                text-align: center;
+            }
+        }
 
-.scorecard-container td input[type="number"] {
-    width: 100%;
-    border: none;
-    text-align: center;
-    box-sizing: border-box;
-}
+        tr {
+            background-color: white;
+            &.gold { background-color: #f7c455; }
+            &.blue { background-color: #46a8f3; }
+            &.white { background-color: white; }
+            &.red { background-color: #d33b4a; }
+            &.par, &.hdi { background-color: #eee5cf; }
+            &.put, &.bnk, &.pnt, &.fwy { background-color: #e0e0e0; }
+           
+            th, td {
+                border: 1px solid #73737383;
+                padding: 10px;
+                text-align: center;
+            }
+        }
+        
+        input[type="number"] {
+            width: 100%;
+            border: none;
+            text-align: center;
+            box-sizing: border-box;
+        }
 
-.scorecard-container select {
-    border: none;
-    background-color: transparent;
-}
+        select {
+        border: none;
+        background-color: transparent;
+        }
+    }
 
-.scorecard-container tr {
-    &.gold { background-color: #f7c455; }
-    &.blue { background-color: #46a8f3; }
-    &.white { background-color: white; }
-    &.red { background-color: #d33b4a; }
-    &.par, &.hdi { background-color: #eee5cf; }
-    &.put, &.bnk, &.pnt, &.fwy { background-color: #e0e0e0; }
+    .scorecard-scrollbox {
+        overflow-x: auto;
+        border: 1px solid #73737383;
+        margin-bottom: 20px;
+    }
 }
 
 .button-container {
@@ -184,4 +194,8 @@
     padding-left: 1em;
     padding-top: 1em;
     align-self: center;
+}
+
+.footer-dashboard {
+    margin-top: 0;
 }
